# heic

./: BENCHMARK_RESULTS.md  CABAC_DESYNC_INVESTIGATION.md  CABAC_DIVERGENCE_ANALYSIS.md  CABAC_PARITY_INVESTIGATION_SUMMARY.md  CHECKLIST.md  CLAUDE.md  CODE_STATE_TIMELINE.md  COLORSPACE.md  CONTEXT-HANDOFF.md  Cargo.toml  DEBUGGING_NEXT_STEPS.md  DECISION12_COMPARISON.md  DECODER_FIX_PLAN.md  DECODE_TERMINATE_INVESTIGATION.md  DIFFERENTIAL_TRACING_FINDINGS.md  DIFFERENTIAL_TRACING_PLAN.md  FEEDBACK.md  HEIC_DECODER_FIXES_REPORT.md  LOCALIZATION_COMPLETE.md  PROGRESS_REPORT.md  QUICKSTART_TRACING.md  README.md  RECOVERY_STATUS.md  ROOT_CAUSE_FOUND.md  ROOT_CAUSE_SAO.md  SLICE_INVESTIGATION_SUMMARY.md  STATE_COMPARISON.md  VUI_IMPLEMENTATION.md  add_split_tracing.py  analyze_scan_order.py  build_libde265_traced.ps1  build_rust_traced.ps1  chat-changes-summary-feb6.md  check_early_divergence.py  compare_bins.py  compare_ci.py  compare_cq.py  compare_ffmpeg.ps1  compare_semantic_ci.py  compare_traces.py  (+9 more)
.claude/: settings.local.json
ITU-T/ITU-T Rec. H.265 (08_2021) High efficiency video coding/: ITU-T Rec. H.265 (08_2021) High efficiency video coding - ITU-T.opf  ITU-T Rec. H.265 (08_2021) High efficiency video coding - ITU-T.txt
benches/: decode.rs
crates/hevc-compare/cpp/: cabac_compare.cpp
crates/hevc-compare/src/: lib.rs
examples/: batch_test.rs  compare_support.rs  compare_yuv.rs  debug_edges.rs  debug_qp.rs  decode_trace.rs  dump_container.rs  dump_hevc.rs  extract_hevc.rs  test_all.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decode_limits.rs  fuzz_probe.rs  fuzz_target_1.rs
memory/: MEMORY.md
output/: scores.txt
src/: error.rs  lib.rs
src/heif/: boxes.rs  grid.rs  mod.rs  parser.rs
src/hevc/: availability.rs  bitstream.rs  cabac.rs  color_convert.rs  colorspace.rs  ctu.rs  deblock.rs  debug.rs  grid.rs  intra.rs  intra_simd.rs  mod.rs  params.rs  picture.rs  residual.rs  sao.rs  slice.rs  transform.rs  transform_simd.rs
tests/: compare_reference.rs  decode_heic.rs  extract_hevc.rs  trace_bad_pixel.rs
