[package]
name = "heic-decoder"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Pure Rust HEIC/HEIF image decoder with SIMD acceleration"
repository = "https://github.com/imazen/heic-decoder-rs"
keywords = ["heic", "heif", "hevc", "image", "decoder"]
categories = ["multimedia::images", "multimedia::encoding"]

[features]
default = ["std"]
std = []

[dependencies]
enough = "0.3"

[dev-dependencies]
criterion = "0.6"
fast-ssim2 = { version = "0.6.5", features = ["imgref"] }
imgref = "1.11"
heic-wasm-rs = { path = "../heic-wasm-rs" }
png = "0.17"

# [[bench]]
# name = "decode"
# harness = false
