[package]
name = "heic-decoder"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Pure Rust HEIC/HEIF image decoder with SIMD acceleration"
repository = "https://github.com/imazen/heic-decoder-rs"
keywords = ["heic", "heif", "hevc", "image", "decoder"]
categories = ["multimedia::images", "multimedia::encoding"]

[features]
default = ["std"]
std = ["archmage/std"]

[dependencies]
enough = "0.3"
whereat = "0.1.3"
archmage = { version = "0.8", default-features = false, features = ["macros", "safe_unaligned_simd"] }
safe_unaligned_simd = "0.2"

[dev-dependencies]
criterion = "0.6"
fast-ssim2 = { version = "0.6.5", features = ["imgref"] }
imgref = "1.11"
heic-wasm-rs = { path = "../heic-wasm-rs" }
png = "0.17"

[profile.release]
lto = "thin"
codegen-units = 1

[[bench]]
name = "decode"
harness = false
