[package]
name = "heic-decoder-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.heic-decoder]
path = ".."

[[bin]]
name = "fuzz_decode"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_decode_limits"
path = "fuzz_targets/fuzz_decode_limits.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_probe"
path = "fuzz_targets/fuzz_probe.rs"
test = false
doc = false
bench = false
